# GiraUno

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
contrib/: README.md  girauno-qt.pro  giraunod.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  girauno-qt.desktop.desktop  girauno-qt.install  girauno-qt.lintian-overrides  girauno-qt.protocol  giraunod.bash-completion  giraunod.examples  giraunod.install  giraunod.lintian-overrides  giraunod.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-girauno.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  ip.perl  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-giraunod-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  girauno-cli-res.rc  girauno-cli.cpp  giraunod-res.rc  giraunod.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  (+48 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: girauno_find_bdb48.m4  girauno_qt.m4  girauno_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  girauno.cpp  girauno.qrc  giraunoaddressvalidator.cpp  giraunoaddressvalidator.h  giraunoamountfield.cpp  giraunoamountfield.h  giraunogui.cpp  giraunogui.h  giraunostrings.cpp  giraunounits.cpp  giraunounits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  (+60 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: girauno_ach.ts  girauno_af_ZA.ts  girauno_ar.ts  girauno_be_BY.ts  girauno_bg.ts  girauno_bs.ts  girauno_ca.ts  girauno_ca@valencia.ts  girauno_ca_ES.ts  girauno_cmn.ts  girauno_cs.ts  girauno_cy.ts  girauno_da.ts  girauno_de.ts  girauno_el_GR.ts  girauno_en.ts  girauno_eo.ts  girauno_es.ts  girauno_es_CL.ts  girauno_es_DO.ts  girauno_es_MX.ts  girauno_es_UY.ts  girauno_et.ts  girauno_eu_ES.ts  girauno_fa.ts  girauno_fa_IR.ts  girauno_fi.ts  girauno_fr.ts  girauno_fr_CA.ts  girauno_gl.ts  girauno_gu_IN.ts  girauno_he.ts  girauno_hi_IN.ts  girauno_hr.ts  girauno_hu.ts  girauno_id_ID.ts  girauno_it.ts  girauno_ja.ts  girauno_ka.ts  girauno_kk_KZ.ts  (+31 more)
src/qt/res/: girauno-qt-res.rc
src/qt/res/icons/: girauno.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_girauno.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md  sighash.json  tx_valid.json
(+16 files in other folders)
